--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,17 @@
 
 /* Your CSS Code here. */
+
+.holder{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+    flex-direction: row-reverse;	
+	height:100vh;
+	width:100vw;
+	flex-wrap:wrap;
+}
+.item{
+	color:black;
+	width:100px;
+	height:100px;
+}
